# soma

./: .clinerules  .cursorrules  .gitignore  .gitmodules  .ignore  AUTHORITY_TESTING_PLAN.md  CLAUDE.md  CLI_SDK_RPC_TESTING_PLAN.md  CODE_OF_CONDUCT.md  CONSENSUS_TESTING_PLAN.md  CONTRIBUTING.md  Cargo.toml  E2E_TESTING_GUIDE.md  IMPLEMENTATION_PLAN.md  INFERENCE_MVP.md  PROTOCOL_CONFIG_TESTING_PLAN.md  README.md  REDESIGN.md  REFACTOR.md  SAFE_MODE.md  SECURITY.md  STORE_TESTING_PLAN.md  SUI_DIFF.md  SYNC_TESTING_PLAN.md  TESTING_PLAN.md  TRANSACTIONS.md  TYPES_TESTING_PLAN.md  flake.nix  pyproject.toml  ty.toml
arrgen/: Cargo.toml  README.md  arrgen.pyi  pyproject.toml
arrgen/src/: lib.rs
arrgen/tests/: test_arrgen.py
authority/: Cargo.toml  build.rs
authority/src/: accumulators.rs  adapter.rs  aggregator.rs  audit_service.rs  authority.rs  authority_aggregator.rs  authority_client.rs  authority_per_epoch_store.rs  authority_per_epoch_store_pruner.rs  authority_server.rs  authority_store.rs  authority_store_pruner.rs  authority_store_tables.rs  authority_test_utils.rs  backpressure_manager.rs  client.rs  committee_store.rs  consensus_adapter.rs  consensus_handler.rs  consensus_manager.rs  consensus_output_api.rs  consensus_quarantine.rs  consensus_store_pruner.rs  consensus_test_utils.rs  consensus_tx_status_cache.rs  consensus_validator.rs  encoder_client.rs  epoch_store.rs  epoch_store_pruner.rs  execution_driver.rs  execution_scheduler.rs  fallback_fetch.rs  fullnode_proxy.rs  global_state_hasher.rs  handler.rs  lib.rs  mysticeti_adapter.rs  orchestrator.rs  output.rs  proxy_server.rs  (+31 more)
blobs/: Cargo.toml
blobs/src/: engine.rs  lib.rs  progress.rs
bridge-node/: Cargo.toml
bridge-node/proto/: bridge.proto
bridge-node/src/: checkpoint_watcher.rs  config.rs  error.rs  eth_client.rs  eth_syncer.rs  lib.rs  node.rs  proto_generated.rs  retry.rs  server.rs  types.rs
cli/: Cargo.toml
cli/src/: cli.rs  client_commands.rs  commands.rs  error.rs  inference.rs  key_identity.rs  keytool.rs  lib.rs  main.rs  response.rs  soma_amount.rs  soma_commands.rs  usdc_amount.rs  validator_commands.rs
cli/tests/: cli_integration_tests.rs  cli_snapshot_tests.rs
consensus/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  build.rs
consensus/src/: ancestor.rs  authority.rs  authority_node.rs  authority_service.rs  base_committer.rs  block.rs  block_manager.rs  block_verifier.rs  broadcaster.rs  commit.rs  commit_consumer.rs  commit_finalizer.rs  commit_observer.rs  commit_syncer.rs  commit_test_fixture.rs  commit_vote_monitor.rs  committee.rs  context.rs  core.rs  core_thread.rs  dag.rs  dag_state.rs  error.rs  leader_schedule.rs  leader_timeout.rs  lib.rs  linearizer.rs  proposed_block_handler.rs  round_prober.rs  round_tracker.rs  service.rs  stake_aggregator.rs  subscriber.rs  synchronizer.rs  test_dag.rs  test_dag_builder.rs  test_dag_parser.rs  threshold_clock.rs  transaction.rs  transaction_certifier.rs  (+1 more)
data-ingestion/: Cargo.toml
data-ingestion/src/: executor.rs  lib.rs  reader.rs  util.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: integration_helpers.rs  lib.rs
e2e-tests/tests/: balance_gas_tests.rs  balance_transfer_tests.rs  challenge_tests.rs  channel_inference_flow_tests.rs  channel_tests.rs  checkpoint_tests.rs  clock_tests.rs  delegation_dual_write_tests.rs  determinism_tests.rs  dynamic_committee_tests.rs  encoder_committee_tests.rs  failpoint_tests.rs  full_node_tests.rs  indexer_tests.rs  lock_tests.rs  marketplace_tests.rs  model_tests.rs  multisig_tests.rs  protocol_version_tests.rs  reconfiguration_tests.rs  rpc_tests.rs  shared_object_tests.rs  simulator_tests.rs  supply_conservation_tests.rs  target_tests.rs  transaction_orchestrator_tests.rs
encoder/: Cargo.toml  README.md  build.rs
encoder-validator-api/: Cargo.toml  build.rs
encoder-validator-api/src/: client.rs  lib.rs  service.rs
encoder/src/: error.rs  lib.rs
evaluation/: Cargo.toml  build.rs
evaluation/src/: lib.rs  parameters.rs
evaluation/tests/: ops.rs  v1.rs
faucet/: Cargo.toml  build.rs
faucet/src/: app_state.rs  codec.rs  errors.rs  faucet_config.rs  faucet_types.rs  lib.rs  local_faucet.rs  main.rs  server.rs  types.rs
indexer-alt/: Cargo.toml
indexer-alt-schema/: Cargo.toml
indexer-alt-schema/src/: checkpoints.rs  cp_sequence_numbers.rs  epochs.rs  lib.rs  objects.rs  schema.rs  soma.rs  transactions.rs
indexer-alt/src/: lib.rs  main.rs  test_utils.rs
indexer-alt/tests/: handler_tests.rs
indexer-e2e-tests/: Cargo.toml
indexer-e2e-tests/src/: lib.rs
indexer-e2e-tests/tests/: pipeline_e2e.rs  synthetic_e2e.rs
indexer-framework/: Cargo.toml
indexer-framework/src/: config.rs  lib.rs  metrics.rs
indexer-kvstore/: Cargo.toml
indexer-kvstore/src/: config.rs  lib.rs  rate_limiter.rs
indexer-kvstore/tests/: bigtable_indexer.rs  bigtable_roundtrip.rs  emulator.rs  grpc_tests.rs  processor_tests.rs
indexer-pg-db/: Cargo.toml
indexer-pg-db/src/: lib.rs  temp.rs
inference/: Cargo.toml
inference/src/: catalog.rs  client.rs  http_util.rs  lib.rs  persist.rs  pricing.rs  tokenizer.rs
inference/tests/: e2e_http.rs  e2e_localnet.rs
models/: Cargo.toml  README.md
models/src/: consine_distance.rs  cosine_distance.rs  lib.rs  running_mean.rs  select_best.rs  tensor.rs  tensor_conversions.rs
models/tests/: embedding.rs  layer_norm.rs  linear.rs  param.rs  v1_attention.rs  v1_encoder.rs  v1_model.rs  v1_model_runner.rs  v1_probe.rs  v1_pwff.rs  v1_sig_reg.rs
node/: Cargo.toml
node/src/: handle.rs  lib.rs
objects/: Cargo.toml
objects/src/: error.rs  lib.rs  parameters.rs
p2p/: Cargo.toml  build.rs
p2p/src/: builder.rs  lib.rs  server.rs  test_utils.rs
probe/: Cargo.toml  build.rs
probe/src/: error.rs  lib.rs
probe/tests/: ops.rs  v1.rs
probes/: Cargo.toml  README.md
probes/src/: tensor.rs
probes/tests/: generator.rs  layer_norm.rs  linear.rs  param.rs  v1_attention.rs  v1_encoder.rs  v1_probe.rs  v1_pwff.rs  v1_sig_reg.rs
protocol-config/: Cargo.toml
python-examples/: pyproject.toml
python-models/: README.md  pyproject.toml
(+1567 files in other folders)
