[workspace]
resolver = "2"
members = [ "shared","cli", "encoder", "soma-python", "probe", "soma-http", "soma-tls", "soma-network", "vdf", "objects"]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
# cargo = "warn"
nursery = "warn"
missing_docs_in_private_items = { level = "warn", priority = -1 }
# pub(crate) is useful for checking dead code
redundant_pub_crate = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[workspace.dependencies]
encoder = { path = "encoder" }
shared = { path = "shared" }
probe = { path = "probe" }
vdf = { path = "vdf" }
soma-http = { path = "soma-http" }
soma-tls = { path = "soma-tls" }
soma-network = { path = "soma-network" }
objects = { path = "objects" }

# external deps
tokio = { version = "1.0", features = ["full"] }
bcs = "0.1.6"
bs58 = "0.5.1"
enum_dispatch = "0.3.13"
fastcrypto = { version = "0.1.9", features = ["copy_key"] }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.7.1", features = ["serde"] }
strum_macros = "0.26"
thiserror = "1.0.63"
base64 = "0.22.1"
multiaddr = "0.18.1"
tracing = "0.1.40"
eyre = "0.6.12"
rand = "0.8"
serde_repr = "0.1.19"
url = { version = "2.5.2", features = ["serde"] }
prost = "0.13.2"
async-trait = "0.1.82"
tonic = { version = "0.12", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-rustls = "0.1.0"
parking_lot = "0.12.3"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tonic-build = "0.12.2"
aes = "0.8.4"
ctr = "0.9.2"
crypto-common = "0.1.6"
pyo3 = "0.23"
pyo3-build-config = "0.23"
numpy = "0.23"
ndarray = { version = "0.16", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
"stream",
  "http2",
  "json",
  "rustls-tls",
  "zstd"
] }
axum = "0.7.9"
zstd = "0.13.2"
tokio-util = "0.7.12"
clap = {version = "4.5", features = ["derive"]}
tempdir = "0.3.7"
arbtest = "0.3.2"
mockall = "0.13.1"
quick_cache = "0.6.10"
hex = "0.4.3"
dashmap = "6.1.0"
burn = "0.16.0"
arc-swap = "1.7.1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
pin-project-lite = "0.2.15"
socket2 = { version = "0.5", features = ["all"] }
tokio-rustls = { version = "0.26", default-features = false }
anyhow = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
pkcs8 = { version = "0.10.0", features = ["std"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
tower-layer = "0.3.2"
webpki = { version = "0.103", package = "rustls-webpki", features = [
  "alloc",
  "std",
  "ring",
] }
x509-parser = { version = "0.17.0", features = ["verify"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
num-prime = { version = "0.4", features = ["big-int"] }
rand_chacha = "0.3"
criterion = "0.5"
num-bigint-dig = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
