[workspace]
members = [
  "consensus",
  "authority",
  "types",
  "utils",
  "node",
  "test-cluster",
  "e2e-tests",
  "p2p",
  "cli",
  "encoder",
  "intelligence",
  "soma-http",
  "soma-tls",
  "vdf",
  "objects",
  "test-encoder-cluster",
  "encoder-validator-api",
  "bin-version",
  "soma-config",
  "soma-keys",
  "rpc",
  "sdk",
  "python-sdk",
  "probes",
  "arrgen",
  "store",
  "store-derive",
  "data-ingestion",
  "protocol-config",
  "protocol-config-macros",
]


resolver = "2"

[workspace.lints.rust]
unsafe_code = "warn"
#TODO: missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
# cargo = "warn"
nursery = "warn"
# missing_docs_in_private_items = { level = "warn", priority = -1 }
# pub(crate) is useful for checking dead code
redundant_pub_crate = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
# TODO: private_intra_doc_links = "warn"


[workspace.package]
# This version string will be inherited by sub crates.
version = "1.0.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
# CONSENSUS DEPENDENCIES
consensus = { path = "consensus" }
types = { path = "types" }
authority = { path = "authority" }
utils = { path = "utils" }
node = { path = "node" }
test-cluster = { path = "test-cluster" }
p2p = { path = "p2p" }
encoder-validator-api = { path = "encoder-validator-api" }
bin-version = { path = "bin-version" }
soma-config = { path = "soma-config" }
soma-keys = { path = "soma-keys" }
rpc = { path = "rpc" }
sdk = { path = "sdk" }
python-sdk = { path = "python-sdk" }
store-derive = { path = "store-derive" }
store = { path = "store" }
data-ingestion = { path = "data-ingestion" }
protocol-config-macros = { path = "protocol-config-macros" }
protocol-config = { path = "protocol-config" }

msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "45b88cffa3f50d6f2022d0b422ca4a077ac96a98", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "45b88cffa3f50d6f2022d0b422ca4a077ac96a98", package = "msim-macros" }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
futures = "0.3.30"
itertools = "0.13.0"
tap = "1.0.1"
nonempty = "0.10.0"
hyper-rustls = { version = "0.27", default-features = false, features = [
  "webpki-roots",
  "http1",
  "http2",
  "ring",
  "tls12",
] }
cfg-if = "1.0.0"
tempfile = "3.12.0"
regex = "1.11"
chrono = "0.4"

tokio = { version = "1.46.1", features = [
  "full",
  "test-util",
  "sync",
] } # tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.14.2", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-rustls = "0.3.0"
tonic-health = "0.14.2"

tracing = "0.1.41" # tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "09f86974195ec85d8aae386b1909d341d3ccfe52", features = [
  "copy_key",
] }

bytes = { version = "1.10.1", features = [
  "serde",
] } # bytes = { version = "1.7.1", features = ["serde"] }
async-trait = "0.1.88" # async-trait = "0.1.81"
bcs = "0.1.6"
eyre = "0.6.12"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
rand = "0.8.5" # rand = "0.8"
serde = { version = "1.0.204", features = [
  "derive",
  "rc",
] } # serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tokio-util = { version = "0.7.10", features = ["compat"] }
ed25519 = { version = "2.2.3", features = ["pkcs8", "alloc", "zeroize"] } # 2
base64 = "0.22.1"
arc-swap = "1.7.1"
tower = { version = "0.5", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] } # 0.4.12
hyper = { version = "1.4.1", features = ["http1", "http2"] } # 1
hyper-util = { version = "0.1.1", features = [
  "tokio",
  "server-auto",
  "service",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
  "ring",
] }
tower-http = { version = "0.5", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
anyhow = "1.0.86" # 1
serde_repr = "0.1.19"
multiaddr = "0.18.1"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"


# ENCODER-ONLY DEPENDENCIES
encoder = { path = "encoder" }
intelligence = { path = "intelligence" }
vdf = { path = "vdf" }
soma-http = { path = "soma-http" }
soma-tls = { path = "soma-tls" }
soma-network = { path = "soma-network" }
objects = { path = "objects" }
test-encoder-cluster = { path = "test-encoder-cluster" }
arrgen = { path = "arrgen" }


# external deps
bs58 = "0.5.1"
enum_dispatch = "0.3.13"
strum_macros = "0.27"
strum = { version = "0.27", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
aes = "0.8.4"
ctr = "0.9.2"
crypto-common = "0.1.6"
pyo3 = "0.24"
pyo3-build-config = "0.24"
numpy = "0.24"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15.0"
reqwest = { version = "0.12.23", default-features = false, features = [
  "stream",
  "http2",
  "json",
  "rustls-tls",
  "zstd",
] }
axum = { version = "0.8", default-features = false, features = [
  "macros",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
zstd = "0.13.2"

clap = { version = "4.5", features = ["derive"] }
tempdir = "0.3.7"
arbtest = "0.3.2"
mockall = "0.13.1"
quick_cache = "0.6.10"
hex = "0.4.3"
dashmap = "6.1.0"
burn = { git = "https://github.com/tracel-ai/burn.git" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git" }
burn-store = { git = "https://github.com/tracel-ai/burn.git", features = [
  "safetensors",
] }

http = "1"
http-body = "1"
http-body-util = "0.1"

pin-project-lite = "0.2.15"
socket2 = { version = "0.5", features = ["all"] }

axum-server = { version = "0.7", features = ["tls-rustls"] }

pkcs8 = { version = "0.10.0", features = ["std"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
tower-layer = "0.3.2"
webpki = { version = "0.103", package = "rustls-webpki", features = [
  "alloc",
  "std",
  "ring",
] }
x509-parser = { version = "0.17.0", features = ["verify"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
num-prime = { version = "0.4", features = ["big-int"] }
rand_chacha = "0.3"
criterion = "0.5"
num-bigint-dig = "0.8"
safetensors = "0.5"
memmap2 = "0.9.5"
colored = "2"
git-version = "0.3.9"
const-str = "0.6.2"
dirs = "6.0.0"
bip32 = "0.5.3"
tiny-bip39 = "2.0.0"
slip10_ed25519 = "0.1.3"
tabled = "0.20.0"
json_to_table = "0.12.0"
ndarray-safetensors = "0.3.0"
serde_urlencoded = "0.7.1"
object_store = { version = "0.12.4", features = [
  "fs",
  "aws",
  "gcp",
  "azure",
  "http",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[patch.crates-io]
tokio = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "45b88cffa3f50d6f2022d0b422ca4a077ac96a98" }
# SHARED DEPENDENCIES
