[workspace]
members = [
  "consensus",
  "authority",
  "types",
  "utils",
  "node",
  "test-cluster",
  "e2e-tests",
  "sync",
  "cli",
  "runtime",
  "soma-http",
  "soma-tls",
  "blobs",
  "bin-version",
  "soma-keys",
  "rpc",
  "sdk",
  "python-sdk",
  "models",
  "arrgen",
  "store",
  "store-derive",
  "data-ingestion",
  "protocol-config",
  "protocol-config-macros",
]


resolver = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# redundant_pub_crate = { level = "allow", priority = 1 }
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
# TODO: private_intra_doc_links = "warn"


[workspace.package]
# This version string will be inherited by sub crates.
version = "1.0.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
# CONSENSUS DEPENDENCIES
consensus = { path = "consensus" }
types = { path = "types" }
authority = { path = "authority" }
utils = { path = "utils" }
node = { path = "node" }
test-cluster = { path = "test-cluster" }
sync = { path = "sync" }
bin-version = { path = "bin-version" }
soma-keys = { path = "soma-keys" }
rpc = { path = "rpc" }
sdk = { path = "sdk" }
python-sdk = { path = "python-sdk" }
store-derive = { path = "store-derive" }
store = { path = "store" }
data-ingestion = { path = "data-ingestion" }
protocol-config-macros = { path = "protocol-config-macros" }
protocol-config = { path = "protocol-config" }

msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "213e543d83b91c4aa904166bef255a6c0054c8a7", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "213e543d83b91c4aa904166bef255a6c0054c8a7", package = "msim-macros" }
tokio-stream = { version = "0.1.18", features = ["sync", "net"] }
futures = "0.3.31"
itertools = "0.13.0"
tap = "1.0.1"
nonempty = "0.10.0"
hyper-rustls = { version = "0.27", default-features = false, features = [
  "webpki-roots",
  "http1",
  "http2",
  "ring",
  "tls12",
] }
cfg-if = "1.0.4"
tempfile = "3.24.0"
regex = "1.12"
chrono = "0.4"

tokio = { version = "1.49.0", features = [
  "full",
  "test-util",
  "sync",
] } # tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.14.3", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-build = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
tonic-rustls = "0.3.0"
tonic-health = "0.14.3"

tracing = "0.1.44" # tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "09f86974195ec85d8aae386b1909d341d3ccfe52", features = [
  "copy_key",
] }

bytes = { version = "1.11.0", features = [
  "serde",
] } # bytes = { version = "1.7.1", features = ["serde"] }
async-trait = "0.1.89" # async-trait = "0.1.81"
bcs = "0.1.6"
eyre = "0.6.12"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
rand = "0.8.5" # rand = "0.8"
serde = { version = "1.0.228", features = [
  "derive",
  "rc",
] } # serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.69"
tokio-util = { version = "0.7.18", features = ["compat"] }
ed25519 = { version = "2.2.3", features = ["pkcs8", "alloc", "zeroize"] } # 2
base64 = "0.22.1"
arc-swap = "1.8.1"
tower = { version = "0.5", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] } # 0.4.12
hyper = { version = "1.8.1", features = ["http1", "http2"] } # 1
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
  "ring",
] }
tower-http = { version = "0.5", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
anyhow = "1.0.100" # 1
serde_repr = "0.1.20"
multiaddr = "0.18.2"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"


runtime = { path = "runtime" }
soma-http = { path = "soma-http" }
soma-tls = { path = "soma-tls" }
blobs = { path = "blobs" }
arrgen = { path = "arrgen" }
models = { path = "models" }


# external deps
bs58 = "0.5.1"
enum_dispatch = "0.3.13"
strum_macros = "0.27"
strum = { version = "0.27", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
aes = "0.8.4"
ctr = "0.9.2"
crypto-common = "0.1.7"
pyo3 = "0.24"
pyo3-build-config = "0.24"
numpy = "0.24"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15.0"
reqwest = { version = "0.12.28", default-features = false, features = [
  "stream",
  "http2",
  "json",
  "rustls-tls",
  "zstd",
] }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
axum = { version = "0.8", default-features = false, features = [
  "macros",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
zstd = "0.13.3"

clap = { version = "4.5", features = ["derive"] }
tempdir = "0.3.7"
arbtest = "0.3.2"
mockall = "0.13.1"
wiremock = "0.6"
quick_cache = "0.6.18"
hex = "0.4.3"
dashmap = "6.1.0"
burn = { version = "0.19.1", features = ["ndarray", "store", "wgpu", "train"] }
http = "1"
http-body = "1"
http-body-util = "0.1"

pin-project-lite = "0.2.16"
socket2 = { version = "0.5", features = ["all"] }
axum-extra = { version = "0.12.5", features = ["query"] }

axum-server = { version = "0.7", features = ["tls-rustls"] }

pkcs8 = { version = "0.10.2", features = ["std"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
tower-layer = "0.3.3"
webpki = { version = "0.103", package = "rustls-webpki", features = [
  "alloc",
  "std",
  "ring",
] }
x509-parser = { version = "0.17.0", features = ["verify"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
num-prime = { version = "0.4", features = ["big-int"] }
rand_chacha = "0.3"
criterion = "0.5"
num-bigint-dig = "0.8"
safetensors = "0.5"
memmap2 = "0.9.9"
colored = "2"
git-version = "0.3.9"
const-str = "0.6.4"
dirs = "6.0.0"
bip32 = "0.5.3"
tiny-bip39 = "2.0.0"
slip10_ed25519 = "0.1.3"
tabled = { version = "0.12" }
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
serde_urlencoded = "0.7.1"
object_store = { version = "0.11.2", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
fixed = { version = "1.30.0", features = ["serde"] }
backoff = { version = "0.4.0", features = [
  "futures",
  "futures-core",
  "pin-project-lite",
  "tokio",
  "tokio_1",
] }
bincode = "1.3.3"
rstest = "0.16.0"
fdlimit = "0.2.1"
uint = "0.9.5"

[patch.crates-io]
tokio = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "213e543d83b91c4aa904166bef255a6c0054c8a7" }
# SHARED DEPENDENCIES
