[package]
name = "arrgen"
version = "0.1.0"
edition = "2024"

[lib]
name = "arrgen"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { workspace = true, optional = true }
rand.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
numpy = { workspace = true, optional = true }

[lints]
workspace = true
