[package]
name = "arrgen"
version = "0.1.0"
edition = "2024"

[lib]
name = "arrgen"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { workspace = true, optional = true }
rand = "0.9"
ndarray = { version = "0.17", features = ["serde"] }
ndarray-rand = "0.16.0"
numpy = { workspace = true, optional = true }

[lints]
workspace = true
