[package]
name = "authority"
edition = "2021"
version.workspace = true

[dependencies]
# TODO: p2p.workspace = true
consensus.workspace = true
types.workspace = true
utils.workspace = true
protocol-config.workspace = true
# test-cluster.workspace = true
enum_dispatch.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio.workspace = true
serde.workspace = true
fastcrypto.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
eyre.workspace = true
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tap.workspace = true
itertools.workspace = true
nonempty.workspace = true
arc-swap.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
msim.workspace = true
tonic-health.workspace = true
store.workspace = true
tempfile.workspace = true
objects.workspace = true
object_store.workspace = true
url.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
soma-http.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
tower-http.workspace = true
http.workspace = true
soma-tls.workspace = true
tonic-prost.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
dashmap = "6.0.1"
lru = "0.12.4"
num_cpus = "1.16.0"
moka = { version = "0.12", default-features = false, features = [
    "sync",
    "atomic64",
] }
once_cell = { version = "1.20.3" }
bincode = "1.3.3"
sysinfo = "0.35.2"
diffy = { version = "0.3", default-features = false }
im = "15"
either = "1.8.0"

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
