[package]
name = "blobs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
fastcrypto.workspace = true
memmap2.workspace = true
object_store.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true
types.workspace = true
burn.workspace = true

[dev-dependencies]
rand.workspace = true
tempdir.workspace = true
wiremock.workspace = true

[lints]
workspace = true
