[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
encoder.workspace = true
colored.workspace = true
bin-version.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
types.workspace = true
soma-keys.workspace = true
bip32.workspace = true
tabled.workspace = true
json_to_table.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
intelligence.workspace = true
objects.workspace = true
soma-tls.workspace = true
rand.workspace = true
bytes.workspace = true
object_store.workspace = true
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
sdk.workspace = true
node.workspace = true
test-cluster.workspace = true
url.workspace = true
tempfile.workspace = true
tap.workspace = true
protocol-config.workspace = true
rpc.workspace = true
futures.workspace = true
chrono.workspace = true
hex.workspace = true
camino = "1.1.1"
csv = "1.2.1"
serde_yaml = "0.8.26"
inquire = "0.6.0"

[lints]
workspace = true

[[bin]]
name = "soma"
path = "src/main.rs"
