[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
bin-version.workspace = true
serde.workspace = true
serde_json.workspace = true
types.workspace = true
soma-keys.workspace = true
bip32.workspace = true
tabled.workspace = true
json_to_table.workspace = true
rand.workspace = true
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
sdk.workspace = true
node.workspace = true
test-cluster.workspace = true
url.workspace = true
tempfile.workspace = true
tap.workspace = true
protocol-config.workspace = true
rpc.workspace = true
tonic.workspace = true
futures.workspace = true
chrono.workspace = true
hex.workspace = true
faucet.workspace = true
scoring.workspace = true
admin.workspace = true
runtime.workspace = true
axum.workspace = true
clap_complete = "4"
camino = "1.2.2"
csv = "1.4.0"
serde_yaml = "0.8.26"
inquire = "0.6.2"

[features]
default = []
cuda = ["runtime/cuda"]
rocm = ["runtime/rocm"]

[dev-dependencies]
insta.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true

[[bin]]
name = "soma"
path = "src/main.rs"
