[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
types.workspace = true
tokio.workspace = true
tracing.workspace = true
utils.workspace = true
tracing-subscriber.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
bytes.workspace = true
async-trait.workspace = true
bcs.workspace = true
eyre.workspace = true
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
ed25519.workspace = true
itertools.workspace = true
multiaddr.workspace = true
tonic.workspace = true
prost.workspace = true
tap.workspace = true
tower.workspace = true


base64 = "0.22.1"
base64-url = "3"
tempfile = "3.12.0"

nom = "7.1.3"

hyper.workspace = true
hyper-util.workspace = true
tokio-rustls.workspace = true
tower-http.workspace = true
hyper-rustls.workspace = true
cfg-if.workspace = true

[build-dependencies]
tonic-build.workspace = true
