[package]
name = "encoder-validator-api"
edition = "2024"
version.workspace = true

[dependencies]
authority.workspace = true
tonic.workspace = true
prost.workspace = true
utils.workspace = true
types.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
