[package]
name = "encoder"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true
tokio.workspace = true
serde.workspace = true
fastcrypto.workspace = true
bcs.workspace = true
enum_dispatch.workspace = true
bytes.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
base64.workspace = true
multiaddr.workspace = true
eyre.workspace = true
tracing.workspace = true
rand.workspace = true
serde_repr.workspace = true
url.workspace = true
prost.workspace = true
async-trait.workspace = true
tonic.workspace = true
tower-http.workspace = true
parking_lot.workspace = true
tower.workspace = true
aes.workspace = true
ctr.workspace = true
crypto-common.workspace = true
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
reqwest.workspace = true
axum.workspace = true
zstd.workspace = true
tokio-util.workspace = true
mockall.workspace = true

[dev-dependencies]
tempdir.workspace = true
arbtest.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
